fix(qs): Spacing and uppercase as well as closing the nav on click fixes
Relates to AUP-273

--- a/public/style.css
+++ b/public/style.css
@@ -48,6 +48,10 @@
     text-align: center;
 }
 
+.text-uppercase {
+    text-transform: uppercase;
+}
+
 h1, h2, h3 {
     font-family: var(--font-family-base);
     font-weight: var(--font-bold);
@@ -65,7 +69,7 @@ h2 {
 
 h3 {
     font-size: 28px;
-    margin-bottom: 18px;
+    margin-bottom: 16px;
 }
 
 
